Finished section 'team', mobile and desktop version

--- a/css/_advertising.scss
+++ b/css/_advertising.scss
@@ -1,26 +1,23 @@
 //ADVERTISING
 .img-advertising {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  background-color: #ffff;
 
   img {
     display: none;
 
     @media (min-width: 992px) {
       display: block;
-      justify-content: center;
-      padding-top: 45px;
-      padding-bottom: 40px;
-      padding-right: 30px;
-      padding-left: 30px;
+      padding: 30px;
+      z-index: 1;
     }
 
     @media (min-width: 1200px) {
-      display: block;
-      padding-top: 98px;
-      padding-bottom: 30px;
-      padding-right: 50px;
-      padding-left: 50px;
+      // padding-top: 98px;
+      // padding-bottom: 30px;
+      // padding-right: 50px;
+      // padding-left: 50px;
     }
   }
 }
