--- a/css/_case.scss
+++ b/css/_case.scss
@@ -1,8 +1,10 @@
 .case {
     // padding: 100px;
     .container {
-      display: flex;
-      flex-direction: column;
+      // display: flex;
+      // flex-direction: column;
+      
+
         .headlines {
           margin-top: 130px;
             text-align: center;
@@ -13,29 +15,44 @@
         }
         .content-grid {
 
-            display: flex;
-            flex-direction: column;
+            // display: flex;
+            // flex-direction: column;
+            // text-align: center;
+            display: grid;
+            grid-template-columns: 1fr;
             text-align: center;
 
-            @media (min-width:1200px) {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-                column-gap:30px;
-                row-gap: 50px;
-            }
+            
+            @media (min-width:768px) {
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+              grid-template-rows: 1fr 1fr;
+              column-gap:30px;
+              // row-gap: 50px;
+          }
+
+            // @media (min-width:768px) {
+            //     display: grid;
+            //     grid-template-columns: 1fr 1fr;
+            //     grid-template-rows: 1fr 1fr;
+            //     column-gap:30px;
+            //     row-gap: 50px;
+            // }
       
           .box{
-            width: 70%;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto 1fr auto;
+            // width: 70%;
             margin: 0 auto;
             // text-align: center;
             border-bottom: 1px solid #E7E7E7;
-            margin-bottom: 60px;
+            // margin-bottom: 60px;
 
             img {
-              max-width: 100%;         /* Begränsa bildens bredd till förälderelementets bredd */
-              max-height: 100%;        /* Begränsa bildens höjd till förälderelementets höjd */
-              width: auto;
+              // max-width: 100%;         
+              // max-height: 100%;        
+              width: 100%;
               height: auto;             
             }
             @media (min-width:1200px) {
@@ -47,14 +64,17 @@
                 margin-top:70px;
                 margin-bottom: 30px;
                 text-align: left;
+                padding-bottom: 16px;
+                padding-top: 35px;
                 @media (min-width:1200px) {
                   border-bottom: 1px solid #E7E7E7;
                 }
               }
               a {
-                  float: right;
+                  text-align: right;
                   text-decoration: none;
                   color: $text-color-dark;
+                  font-weight: 500;
                 //   font-family: $font-family-Inter;
                 font-size: 14px;
                 border: none;
@@ -74,34 +94,20 @@
 
               }
           } 
-
-
-          .box-1 {
-            grid-column: 1/2;
-            grid-row: 1/2;
-          }
-          .box-2 {
-            grid-column: 1/2;
-            grid-row: 2/3;
-          }
-          .box-3 {
-            grid-column: 2/2;
-            grid-row: 2/3;
-          }
-          .box-4 {
-            grid-column: 2/3;
-            grid-row: 1/2;
-          }
           .btn-black{
             margin-bottom: 30px;
             i {
               margin-left: 10px;
           }
           }
-
-
+          .center-content{
+            margin-top: 50px;
+            margin-bottom: 90px;
+          }
         }
       }
+
+
     
   
 
