--- a/css/_showcase.scss
+++ b/css/_showcase.scss
@@ -1,6 +1,15 @@
 // SHOWCASE
 .showcase {
     background-color: #F0EFE9;
+    position: relative;
+    z-index: 0;
+
+   .background-lines{
+        position: absolute;
+        bottom: -140px;
+        z-index: -1;
+        width: 100%;
+    }
     .container {
         display: flex;
         justify-content: space-between;
