--- a/css/_team.scss
+++ b/css/_team.scss
@@ -1,34 +1,146 @@
-.team{
-    .container{
-        .top{
-            h2{
+.team {
+  background-color: #edcf86;
+  .container {
+    text-align: center;
 
-            }
-            h3{
-
-            }
-            a{
-
-            }
-        }
-        .content{
-            display: flex;
-            flex-direction: column;
-            .box{
-         
-                img{
-                    max-width: 100%;         /* Begränsa bildens bredd till förälderelementets bredd */
-                    max-height: 100%;        /* Begränsa bildens höjd till förälderelementets höjd */
-                    width: auto;
-                    height: auto;  
-                    p{
-
-                    }
-                    .descr-txt{
-
-                    }
-                }
-            }
-        }
+    @media (min-width: 992px) {
     }
+    .top-heading {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 40px;
+      // text-align: center;
+      @media (min-width: 992px) {
+        text-align: left;
+        margin-bottom: 40px;
+      }
+
+      @media (min-width: 1200px) {
+      }
+
+      h2 {
+        margin-top: 120px;
+        margin-bottom: 20px;
+        // text-align: center;
+        @media (min-width: 992px) {
+          text-align: left;
+        }
+      }
+      .top-row {
+        display: flex;
+        flex-direction: column;
+
+        @media (min-width: 992px) {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-content: center;
+        }
+      }
+      h3 {
+      }
+      a {
+        // display: block;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        margin-bottom: 60px;
+
+
+        @media (min-width: 992px) {
+          display: flex;
+          justify-content: flex-end;
+          margin-left: 180px;
+          padding-right: 40px;
+          padding-left: 40px;
+        }
+        @media (min-width: 1200px) {
+            margin-left: 360px;
+        }
+        @media (min-width: 1400px) {
+            margin-left: 530px;
+        }
+      }
+    }
+    .content {
+      display: grid;
+      grid-template-columns: repeat(
+        auto-fill,
+        minmax(240px, 1fr)
+      ); /* Använd auto-fill för automatisk fyllning */
+      grid-gap: 35px;
+      text-align: center;
+      margin-top: 40px;
+      justify-content: center;
+      align-content: center;
+      text-align: center;
+      margin: 0 auto;
+      // display: grid;
+      // grid-template-columns: 1fr 1fr 1fr 1fr;
+
+      @media (min-width: 992px) {
+        // grid-template-columns: repeat(4, 1fr);
+      }
+
+      .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        max-width: 100%;
+        @media (min-width: 992px) {
+            align-items: flex-start;
+           }
+        img {
+          max-width: 100%;
+          max-height: 100%;
+          width: auto;
+          height: auto;
+          margin-bottom: 30px;
+        }
+          p {
+            font-family: $font-family-DM;
+            font-weight: 700;
+            font-size: 1.38rem;
+            @media (min-width: 992px) {
+               text-align: left;
+              }
+            
+          }
+          .descr-txt {
+            font-family: $font-family-Inter;
+            font-size: 1em;
+            font-weight: 400;
+            color: #595039;
+            margin-top: -10px;
+            margin-bottom: 56px;
+          }
+        
+      }
+    }
+  }
+  .dots{
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 145px;
+
+
+
+  .dot {
+    height: 15px;
+    width: 15px;
+    background-color: #707070;
+    border-radius: 50%;
+    display: inline-block;
+
+  }
+  .dot-2{
+    background-color: #191919;
+
+
+  }
+}
 }
