--- a/css/_services.scss
+++ b/css/_services.scss
@@ -2,12 +2,13 @@
   padding: 40px;
   background-color: #f0efe9;
   position: relative;
+  z-index: 0;
 
-  .background-lines-righ {
+  .background-lines-right {
     position: absolute;
     bottom: 0px;
-
-
+    right: 0px;
+    z-index: -1;
   }
 
   .container {
