--- a/css/style.css
+++ b/css/style.css
@@ -457,10 +457,13 @@ header .container .btn-login {
   padding: 40px;
   background-color: #f0efe9;
   position: relative;
+  z-index: 0;
 }
-.services .background-lines-righ {
+.services .background-lines-right {
   position: absolute;
   bottom: 0px;
+  right: 0px;
+  z-index: -1;
 }
 .services .container {
   display: flex;
@@ -585,6 +588,9 @@ header .container .btn-login {
   margin: 0 auto;
 }
 
+.choose-us .container {
+  z-index: 0;
+}
 .choose-us .container .main-img-container {
   position: relative;
   top: 200px;
@@ -597,12 +603,13 @@ header .container .btn-login {
   .choose-us .container .main-img-container .frame-grey {
     display: block;
     background-color: #F0EFE9;
-    width: 220%;
-    top: 90px;
+    width: 290%;
+    top: 60px;
     left: 10px;
-    height: 250px;
-    margin-top: 120px;
+    height: 410px;
+    margin-top: 50px;
     margin-left: -20px;
+    z-index: -1;
   }
 }
 .choose-us .container .main-img-container .main-img {
@@ -619,9 +626,9 @@ header .container .btn-login {
   .choose-us .container .main-img-container .main-img {
     display: block;
     position: absolute;
-    top: 30px;
-    left: 30px;
-    width: 160%;
+    top: -130px;
+    left: 70px;
+    width: 200%;
   }
 }
 @media (min-width: 1200px) {
@@ -778,6 +785,7 @@ header .container .btn-login {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
+  z-index: 0;
 }
 .subscribe .background-wavy-lines {
   position: absolute;
@@ -844,6 +852,7 @@ header .container .btn-login {
   }
 }
 .subscribe .container form button {
+  position: relative;
   border: none;
   z-index: 0;
 }
@@ -959,12 +968,8 @@ header .container .btn-login {
   margin-bottom: 56px;
 }
 .team .dots {
-  display: flex;
-  gap: 10px;
   text-align: center;
-  justify-content: center;
-  align-content: center;
-  margin-bottom: 145px;
+  padding-bottom: 120px;
 }
 .team .dots .dot {
   height: 15px;
@@ -972,9 +977,77 @@ header .container .btn-login {
   background-color: #707070;
   border-radius: 50%;
   display: inline-block;
+  margin-right: 6px;
 }
 .team .dots .dot-2 {
   background-color: #191919;
+}
+
+.testimonial {
+  background-color: #edcf86;
+  border-top: 1px solid #edcf86;
+  padding-block: 9rem;
+}
+.testimonial .container {
+  padding-inline: 6rem;
+  background-color: #fff;
+  padding-block: 10rem;
+}
+.testimonial .container .top-heading {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.testimonial .container .top-heading h2 {
+  margin-bottom: 45px;
+}
+.testimonial .container article {
+  gap: 70px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+}
+.testimonial .container article .box p {
+  line-height: 2rem;
+  margin-bottom: 50px;
+}
+.testimonial .container article .box .rating {
+  margin-bottom: 30px;
+}
+.testimonial .container article .box .rating span {
+  color: #f94d1c;
+}
+.testimonial .container article .box .rater {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: 1fr 1fr;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.testimonial .container article .box .rater img {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  -o-object-fit: "";
+     object-fit: "";
+}
+.testimonial .container article .box .rater p {
+  margin-bottom: 0;
+}
+.testimonial .container article .box .rater .name {
+  grid-column: 2/3;
+  grid-row: 1/1;
+  font-family: "Inter", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+}
+.testimonial .container article .box .rater .descr-txt {
+  grid-column: 2/3;
+  grid-row: 2/2;
+  color: #F94D1C;
+}
+.testimonial .container .center-content {
+  margin-top: 110px;
 }
 
 * {
@@ -1096,6 +1169,7 @@ h4 {
   font-size: 16px;
 }
 .btn-black i {
+  margin-left: 7px;
   font-size: 0.9em;
 }
 .btn-black:hover {
