--- a/css/style.css
+++ b/css/style.css
@@ -1050,6 +1050,48 @@ header .container .btn-login {
   margin-top: 110px;
 }
 
+.articles .container .top-heading {
+  /* h2{} */
+}
+.articles .container .top-heading .top-row {
+  /* h3{}
+  a{} */
+}
+.articles .container article .img-1 {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+.articles .container article .box-date {
+  background-color: #F9D783;
+  display: block;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+.articles .container article .box-date span {
+  font-family: "DM Sans", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+}
+.articles .container article h4 {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  color: #6A6C71;
+  font-weight: 400;
+}
+.articles .container article h5 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+}
+.articles .container article p {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  color: #6A6C71;
+  font-weight: 400;
+}
+
 * {
   box-sizing: border-box;
 }
