--- a/css/_team.scss
+++ b/css/_team.scss
@@ -127,8 +127,6 @@
     text-align: center;
     padding-bottom: 120px;
 
-
-
   .dot {
     height: 15px;
     width: 15px;
@@ -138,7 +136,7 @@
     margin-right: 6px;
 
   }
-  .dot-2{
+  .dot-active{
     background-color: #191919;
 
 
