--- a/css/_case.scss
+++ b/css/_case.scss
@@ -1,116 +1,104 @@
 .case {
-    // padding: 100px;
-    .container {
+  // padding: 100px;
+  .container {
+    // display: flex;
+    // flex-direction: column;
+
+    .headlines {
+      margin-top: 130px;
+      text-align: center;
+      h3 {
+        margin-top: 40px;
+        margin-bottom: 100px;
+      }
+    }
+    .content-grid {
       // display: flex;
       // flex-direction: column;
-      
+      // text-align: center;
+      display: grid;
+      grid-template-columns: 1fr;
+      text-align: center;
 
-        .headlines {
-          margin-top: 130px;
-            text-align: center;
-            h3{
-              margin-top: 40px;
-              margin-bottom: 100px;
-            }
-        }
-        .content-grid {
-
-            // display: flex;
-            // flex-direction: column;
-            // text-align: center;
-            display: grid;
-            grid-template-columns: 1fr;
-            text-align: center;
-
-            
-            @media (min-width:768px) {
-              display: grid;
-              grid-template-columns: 1fr 1fr;
-              grid-template-rows: 1fr 1fr;
-              column-gap:30px;
-              // row-gap: 50px;
-          }
-
-            // @media (min-width:768px) {
-            //     display: grid;
-            //     grid-template-columns: 1fr 1fr;
-            //     grid-template-rows: 1fr 1fr;
-            //     column-gap:30px;
-            //     row-gap: 50px;
-            // }
-      
-          .box{
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: auto 1fr auto;
-            // width: 70%;
-            margin: 0 auto;
-            // text-align: center;
-            border-bottom: 1px solid #E7E7E7;
-            // margin-bottom: 60px;
-
-            img {
-              // max-width: 100%;         
-              // max-height: 100%;        
-              width: 100%;
-              height: auto;             
-            }
-            @media (min-width:1200px) {
-              border-bottom: none;
-            }
-
-            }
-            h4 {
-                margin-top:70px;
-                margin-bottom: 30px;
-                text-align: left;
-                padding-bottom: 16px;
-                padding-top: 35px;
-                @media (min-width:1200px) {
-                  border-bottom: 1px solid #E7E7E7;
-                }
-              }
-              a {
-                  text-align: right;
-                  text-decoration: none;
-                  color: $text-color-dark;
-                  font-weight: 500;
-                //   font-family: $font-family-Inter;
-                font-size: 14px;
-                border: none;
-                margin-bottom: 20px;
-                
-
-                @media (min-width:1200px) {
-                  margin-bottom: 10px;
-                }
-                &:hover {
-                    border-radius: 25px;
-                    background-color: $btn-yellow;
-                    // text-decoration: underline;
-                    text-transform: uppercase;
-                }
-
-
-              }
-          } 
-          .btn-black{
-            margin-bottom: 30px;
-            i {
-              margin-left: 10px;
-          }
-          }
-          .center-content{
-            margin-top: 50px;
-            margin-bottom: 90px;
-          }
-        }
+      @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        column-gap: 30px;
+        // row-gap: 50px;
       }
 
+      // @media (min-width:768px) {
+      //     display: grid;
+      //     grid-template-columns: 1fr 1fr;
+      //     grid-template-rows: 1fr 1fr;
+      //     column-gap:30px;
+      //     row-gap: 50px;
+      // }
 
-    
-  
+      .box {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr auto;
+        // width: 70%;
+        margin: 0 auto;
+        // text-align: center;
+        border-bottom: 1px solid #e7e7e7;
+        // margin-bottom: 60px;
 
+        img {
+          // max-width: 100%;
+          // max-height: 100%;
+          width: 100%;
+          height: auto;
+        }
+        @media (min-width: 1200px) {
+          border-bottom: none;
+        }
+      }
+      h4 {
+        margin-top: 70px;
+        margin-bottom: 30px;
+        text-align: left;
+        padding-bottom: 16px;
+        padding-top: 35px;
+        @media (min-width: 1200px) {
+          border-bottom: 1px solid #e7e7e7;
+        }
+      }
+      a {
+        display: block;
+        justify-self: flex-end;
+        width: 35%;
+        text-align: center;
+        text-decoration: none;
+        color: $text-color-dark;
+        font-weight: 500;
+        font-family: $font-family-Inter;
+        font-size: 14px;
+        border: none;
+        margin-bottom: 20px;
 
-
-  
+        @media (min-width: 1200px) {
+          margin-bottom: 10px;
+        }
+        &:hover {
+          border-radius: 25px;
+          background-color: $btn-yellow;
+          // text-decoration: underline;
+          text-transform: uppercase;
+        }
+      }
+    }
+    .btn-black {
+      margin-bottom: 30px;
+      i {
+        margin-left: 10px;
+      }
+    }
+    .center-content {
+      margin-top: 50px;
+      margin-bottom: 90px;
+    }
+  }
+}
