--- a/css/_features.scss
+++ b/css/_features.scss
@@ -36,6 +36,7 @@
       font-family: $font-family-Inter;
       margin-bottom: 30px;
       margin-top: 30px;
+      z-index: 0;
     }
     h3 {
       color: $text-color-dark;
