--- a/css/_testimonial.scss
+++ b/css/_testimonial.scss
@@ -18,78 +18,94 @@
       }
     }
     article {
-    //   display: flex;
-    //   flex-direction: column;
       gap: 70px;
       display: grid;
-      grid-template-columns: repeat(
-          auto-fill,
-          minmax(240px, 1fr)
-        );
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      justify-content: center;
+      text-align: center;
 
       .box {
-        // display: grid;
-        // grid-template-columns: repeat(
-        //     auto-fill,
-        //     minmax(200px, 1fr)
-        //   );
-        p{
-            line-height: 2rem;
-            margin-bottom: 50px;
+        margin-bottom: 20px;
+        p {
+          line-height: 2rem;
+          margin-bottom: 50px;
         }
         .rating {
-            margin-bottom: 30px;
+          margin-bottom: 30px;
           span {
             color: #f94d1c;
           }
         }
         .rater {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: auto 1fr 1fr;
+          row-gap: 10px;
+
+          @media (min-width: 992px) {
             display: grid;
-            grid-template-columns: auto 1fr auto;
-            grid-template-rows: 1fr 1fr;
+            grid-template-columns: auto 1fr;
+            grid-template-rows: auto 1fr;
             column-gap: 20px;
-
-            @media (min-width: 992px) {
-                
-            }
-            @media (min-width: 1200px) {
-                // display: grid;
-                // grid-template-columns: auto 1fr auto;
-                // grid-template-rows: 1fr 1fr;
-                // column-gap: 20px;
-            }
-
+            text-align-last: left;
+          }
+          @media (min-width: 1200px) {
+            // display: grid;
+            // grid-template-columns: auto 1fr auto;
+            // grid-template-rows: 1fr 1fr;
+            // column-gap: 20px;
+          }
 
           img {
-            grid-column: 1/2;
-            grid-row: 1/3;
+            grid-column: 1/1;
+            grid-row: 1/1;
+            margin: 0 auto;
             height: 50px;
             width: 50px;
             border-radius: 50%;
             object-fit: "";
+
+            @media (min-width: 992px) {
+              grid-column: 1/2;
+              grid-row: 1/3;
+            }
           }
           p {
             margin-bottom: 0;
           }
           .name {
-            grid-column: 2/3;
-            grid-row: 1/1;
+            grid-column: 1/1;
+            grid-row: 2/2;
+
             font-family: $font-family-Inter;
             font-size: 22px;
             font-weight: 700;
-
+            @media (min-width: 992px) {
+              grid-column: 2/3;
+              grid-row: 1/1;
+            }
           }
 
           .descr-txt {
-            grid-column: 2/3;
-            grid-row: 2/2;
-            color: #F94D1C;
+            grid-column: 1/1;
+            grid-row: 3/3;
+
+            color: #f94d1c;
+            @media (min-width: 992px) {
+              grid-column: 2/3;
+              grid-row: 2/2;
+            }
           }
         }
       }
+      @media (min-width: 992px) {
+        text-align: left;
+        margin-bottom: 100px;
+
+      }
     }
     .center-content {
-        margin-top: 110px;
+      margin-top: 110px;
     }
   }
 }
